<resources>
    <string name="app_name">Completionist Guild</string>
    <string name="title_activity_navigation_drawer">Navigation_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile_view">profileView</string>

	<string name="titulo">Titulo</string>
	<string name="horas_de_complecion">Horas de complecion</string>
	<string name="valoracion">Valoracion</string>
	<string name="generos">Generos</string>
	<string name="informacion">Informacion</string>
	<string name="etiquetas">Etiquetas</string>
	<string name="guias">Guias</string>
	<string name="logros">Logros</string>
	<string name="icono">Icono</string>
	<string name="rareza">Rareza</string>
	<string name="logros_desbloqueados">Logros desbloqueados</string>
	<string name="fecha">Fecha</string>
	<string name="lugar">Lugar</string>
	<string name="avatar">Avatar</string>
	<string name="nombre">Nombre</string>
	<string name="puntuacion">Puntuacion</string>
	<string name="posicion">Posicion</string>
	<string name="logros_mas_valiosos">Logros mas valiosos</string>
	<string name="logros_mas_recientes">Logros mas recientes</string>
	<string name="juegos_en_coleccion">Juegos en coleccion</string>
	<string name="juegos_pineados">Juegos pineados</string>
	<string name="guias_realizadas">guias realizadas</string>
	<string name="hilos_generados">Hilos generados</string>
	<string name="problema_del_hilo">Problema del hilo:</string>
	<string name="por">Por: </string>
	<string name= "contenido">Contenido</string>
	<string name="nombre_de_usuario">Nombre de usuario</string>
	<string name="interestedgames__">InterestedGames:</string>
	<string name="archivo_de_validacion">Archivo de validacion</string>
	<string name="publicaciones_ofertadas">Publicaciones ofertadas</string>
	<string name="usuario">Usuario</string>
	<string name="validado">Validado</string>
	<string name="opciones">Opciones</string>
	<string name="Id_del_juego">Id del juego</string>
	<string name="clave_del_juego">Clave del juego</string>
	<string name="id_del_juego_interesado_1">Id del juego interesado 1</string>
	<string name="id_del_juego_interesado_2">Id del juego interesado 2</string>
	<string name="id_del_juego_interesado_3">Id del juego interesado 3</string>
	<string name="subir_archivo">subir archivo</string>
	<string name="descripcion">Descripcion</string>
	<string name="tabla_de_clasificacion">Tabla de clasificacion</string>
	<string name="dlcs_requieridos">Dlcs requieridos</string>
	<string name="plataforma">Plataforma</string>
	<string name="idioma">Idioma</string>
	<string name="perfil">Perfil</string>
	<string name="puntuacion_global">Puntuacion global</string>
	<string name="buscar_titulo">Buscar titulo</string>
	<string name="buscar_usuario"> Buscar  usuario</string>
	<string name="intercambiar_juegos">Intercambiar juegos</string>
	<string name="reportes_o_sugerencias">Reportes o sugerencias</string>
	<string name="configuracion">Configuracion</string>
	<string name="cerrar_sesion">Cerrar sesion</string>
	<string name="restriccion">Restriccion</string>
	<string name="ofertas_publicadas">Ofertas publicadas</string>
	<string name="numero_de_ofertas">Numero de ofertas</string>
	<string name="autor">Autor</string>
	<string name="votos">Votos</string>
	<string name="mas">mas</string>
	<string name="menos">menos</string>
	<string name="place">Place</string>
	<string name="asunto">Asunto</string>
	<string name="horas">Horas</string>
	<string name="autenticarse">Autenticarse</string>
	<string name="respuesta">Respuesta</string>
</resources>