<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/roundbutton"
    tools:context=".game.achievementInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="2dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:textSize="20dp"
            android:text="@string/titulo"
            android:textColor="@color/light_gray"
            android:id="@+id/achievementName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginTop="7dp"
            android:text="@string/descripcion"
            android:textColor="@color/light_gray"
            android:id="@+id/achievementDesctiption"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginTop="7dp"
            android:text="@string/rareza"
            android:textColor="@color/light_gray"
            android:id="@+id/achievementRarity"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/achievementLeaderboard"
            android:layout_marginTop="7dp"
            android:padding="5dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/tabla_de_clasificacion"
            android:background="@drawable/roundlightgrey"/>
    </LinearLayout>
</FrameLayout>