<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mate"
    tools:context=".game.leaderboardView">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/tabla_de_clasificacion"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="*">

                <TableRow
                    android:layout_height="20dp"
                    android:background="@color/gray"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".19"
                        android:autoSizeTextType="uniform"
                        android:background="@drawable/border"
                        android:padding="10dp"
                        android:text="@string/lugar"
                        android:textColor="@color/white" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".2"
                        android:autoSizeTextType="none"
                        android:background="@drawable/border"
                        android:padding="10dp"
                        android:text="@string/avatar"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".4"
                        android:autoSizeTextType="none"
                        android:background="@drawable/border"
                        android:padding="10dp"
                        android:text="@string/nombre"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".21"
                        android:autoSizeTextType="uniform"
                        android:background="@drawable/border"
                        android:padding="10dp"
                        android:text="@string/puntuacion"
                        android:textColor="@color/white" />




                </TableRow>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/leaderboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>