<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/evenmorerandomshit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:background="@drawable/roundbutton"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/guideSmallAvatar"
            android:layout_width="wrap_content"
            android:layout_height="100dp" />

        <LinearLayout
            android:id="@+id/somerandomshitthatwontwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:orientation="vertical"
            android:weightSum="3">

            <TextView
                android:id="@+id/guideSmallAutor"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:autoSizeTextType="none"
                android:text="@string/autor"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/guideSmallVotes"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:autoSizeTextType="none"
                android:text="@string/votos"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/guideSmallDate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:autoSizeTextType="none"
                android:text="@string/fecha"
                android:textColor="@color/white" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/nosense"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/guideSmallUpVote"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_up"
                android:text="@string/mas" />

            <ImageButton
                android:id="@+id/guideSmallDownVote"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_down"
                android:text="@string/menos" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/guideSmallInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:maxLines="4"
        android:textColor="@color/white" />

</LinearLayout>